// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`root > when deploy is given > prints the usage when --help is passed 1`] = `
"Deploy a development environment to production.

Deploy ensures your directory is in sync with your current
development environment and that it is in a deployable state.

If there are any issues, it will first display them and ask
if you would like to deploy anyways.

USAGE

  ggt deploy [DIRECTORY] [--app=<name>] [--env=<name>] [--prefer=<filesystem>] [--once]
                         [--allow-unknown-directory] [--allow-different-app]

EXAMPLES

  $ ggt deploy
  $ ggt deploy ~/gadget/example
  $ ggt deploy ~/gadget/example --app=example
  $ ggt deploy ~/gadget/example --app=example --env=development
  $ ggt deploy ~/gadget/example --app=example --env=development --prefer=local

ARGUMENTS

  DIRECTORY
    The path to the directory to sync your development environment's
    files to before deploying it to your production environment.
    The directory will be created if it does not exist.

    Defaults to the current working directory. (default: \\".\\")

FLAGS

  -a, --app, --application=<name>
    The Gadget application to deploy.

    If not provided, the application will be inferred from the
    \\".gadget/sync.json\\" file in the chosen directory or any of its
    parent directories.

    If a \\".gadget/sync.json\\" file is not found, you will be
    prompted to choose an application from your list of apps.

  -e, --env, --environment=<name>
    The environment to deploy from.

    If not provided, the environment will be inferred from the
    \\".gadget/sync.json\\" file in the chosen directory or any of its
    parent directories.

    If a \\".gadget/sync.json\\" file is not found, you will be
    prompted to choose an environment from your list of environments.

  --prefer=<filesystem>
    Which filesystem's changes to automatically keep when
    conflicting changes are detected.

    If not provided, deploy will pause when conflicting changes are
    detected and you will be prompted to choose which changes to
    keep before deploy resumes.

    Must be one of \\"local\\" or \\"gadget\\".

  --allow-unknown-directory
    Allows deploy to continue when the chosen directory already
    contains files and does not contain a valid \\".gadget/sync.json\\"
    file within it, or any of its parent directories.

    Defaults to false.

  --allow-different-app
    Allows deploy to continue when the chosen directory contains a
    valid \\".gadget/sync.json\\" file, but the application within
    it does not match the application provided by the --app flag.

    Defaults to false.

  --force
    Deploy your development environment to production regardless
    of any issues it may have.

    These issues may include:
      • Syntax errors
      • TypeScript errors
      • Missing fields that should be present on models
"
`;

exports[`root > when deploy is given > prints the usage when -h is passed 1`] = `
"Deploy a development environment to production.

USAGE
  ggt deploy [DIRECTORY]

EXAMPLES
  $ ggt deploy
  $ ggt deploy ~/gadget/example
  $ ggt deploy ~/gadget/example --app=example
  $ ggt deploy ~/gadget/example --app=example --env=development
  $ ggt deploy ~/gadget/example --app=example --env=development --prefer=local

ARGUMENTS
  DIRECTORY    The directory to sync files from and deploy (default: \\".\\")

FLAGS
  -a, --app=<name>           The Gadget application to deploy
  -e, --env=<name>           The environment to deploy from
      --prefer=<filesystem>  Prefer \\"local\\" or \\"gadget\\" conflicting changes
      --force                Deploy regardless of any issues found

Run \\"ggt deploy --help\\" for more information.
"
`;

exports[`root > when list is given > prints the usage when --help is passed 1`] = `
"List the apps available to the currently logged in user.

USAGE
  ggt list

EXAMPLES
  $ ggt list
"
`;

exports[`root > when list is given > prints the usage when -h is passed 1`] = `
"List the apps available to the currently logged in user.

USAGE
  ggt list

EXAMPLES
  $ ggt list
"
`;

exports[`root > when login is given > prints the usage when --help is passed 1`] = `
"Log in to your account.

USAGE
  ggt login

EXAMPLES
  $ ggt login
"
`;

exports[`root > when login is given > prints the usage when -h is passed 1`] = `
"Log in to your account.

USAGE
  ggt login

EXAMPLES
  $ ggt login
"
`;

exports[`root > when logout is given > prints the usage when --help is passed 1`] = `
"Log out of your account.

USAGE
  ggt logout

EXAMPLES
  $ ggt logout
"
`;

exports[`root > when logout is given > prints the usage when -h is passed 1`] = `
"Log out of your account.

USAGE
  ggt logout

EXAMPLES
  $ ggt logout
"
`;

exports[`root > when pull is given > prints the usage when --help is passed 1`] = `
"Pull Gadget's file changes to your local filesystem.

The changes will be calculated from the last time you ran
\\"ggt sync\\", \\"ggt push\\", or \\"ggt pull\\" in the chosen directory.

If your local filesystem has also made changes since the last sync,
you will be prompted to discard them or abort the pull.

USAGE

  ggt pull [DIRECTORY] [--app=<name>] [--environment=<name>] [--force]

EXAMPLES

  $ ggt pull
  $ ggt pull ~/gadget/example
  $ ggt pull ~/gadget/example --app=example
  $ ggt pull ~/gadget/example --app=example --environment=development
  $ ggt pull ~/gadget/example --app=example --environment=development --force

ARGUMENTS

  DIRECTORY
    The path to the directory to pull files to.

    Defaults to the current working directory. (default: \\".\\")

FLAGS

  -a, --app=<name>
    The Gadget application to pull files to.

    If not provided, the application will be inferred from the
    \\".gadget/sync.json\\" file in the chosen directory or any of its
    parent directories.

    If a \\".gadget/sync.json\\" file is not found, you will be
    prompted to choose an application from your list of apps.

  --force
    If the Gadget environment made changes since the last sync, they
    will be discarded without confirmation.
"
`;

exports[`root > when pull is given > prints the usage when -h is passed 1`] = `
"Pull Gadget's file changes to your local filesystem.

USAGE
  ggt pull [DIRECTORY]

EXAMPLES
  $ ggt pull
  $ ggt pull ~/gadget/example
  $ ggt pull ~/gadget/example --app=example
  $ ggt pull ~/gadget/example --app=example --environment=development

ARGUMENTS
  DIRECTORY                  The directory to pull files to (default: \\".\\")

FLAGS
  -a, --app=<name>           The Gadget application to pull files from
  -e, --environment=<name>   The Gadget environment to pull files from
      --force                Discard Gadget's changes

  Run \\"ggt pull --help\\" for more information.
"
`;

exports[`root > when push is given > prints the usage when --help is passed 1`] = `
"Push your local file changes to Gadget.

The changes will be calculated from the last time you ran
\\"ggt sync\\", \\"ggt push\\", or \\"ggt pull\\" in the chosen directory.

If Gadget has also made changes since the last sync,
you will be prompted to discard them or abort the push.

USAGE

  ggt push [DIRECTORY] [--app=<name>] [--env=<name>] [--force]

EXAMPLES

  $ ggt push
  $ ggt push ~/gadget/example
  $ ggt push ~/gadget/example --app=example
  $ ggt push ~/gadget/example --app=example --env=development
  $ ggt push ~/gadget/example --app=example --env=development --force

ARGUMENTS

  DIRECTORY
    The path to the directory to push files from.

    Defaults to the current working directory. (default: \\".\\")

FLAGS

  -a, --app=<name>
    The Gadget application to push files to.

    If not provided, the application will be inferred from the
    \\".gadget/sync.json\\" file in the chosen directory or any of its
    parent directories.

    If a \\".gadget/sync.json\\" file is not found, you will be
    prompted to choose an application from your list of apps.

  --force
    If Gadget has also made changes since the last sync, they
    will be discarded without confirmation.
"
`;

exports[`root > when push is given > prints the usage when -h is passed 1`] = `
"Push your local file changes to Gadget.

USAGE
  ggt push [DIRECTORY]

EXAMPLES
  $ ggt push
  $ ggt push ~/gadget/example
  $ ggt push ~/gadget/example --app=example
  $ ggt push ~/gadget/example --app=example --env=development

ARGUMENTS
  DIRECTORY          The directory to push files from (default: \\".\\")

FLAGS
  -a, --app=<name>   The Gadget application to push files to
  -e, --env=<name>   The Gadget environment to push files to
      --force        Discard Gadget's changes

  Run \\"ggt push --help\\" for more information.
"
`;

exports[`root > when sync is given > prints the usage when --help is passed 1`] = `
"Sync your local filesystem with your Gadget environment's
filesystem in real-time.

While ggt sync is running, local file changes are immediately
reflected within Gadget, while files that are changed in Gadget are
immediately saved to your local filesystem.

Ideal for:
  • Local development with editors like VSCode
  • Storing source code in a Git repository like GitHub

Sync looks for a \\".ignore\\" file to exclude files and directories
from being synced. The format is identical to Git's.

These files are always ignored:
  • .DS_Store
  • .gadget
  • .git
  • node_modules

Note:
  • Sync only works with your development environment
  • Avoid deleting or moving all your files while sync is running
  • Gadget only supports Yarn v1 for dependency installation

https://docs.gadget.dev/guides/development-tools/cli#filesync

USAGE

  ggt sync [DIRECTORY] [--app=<name>] [--env=<name>] [--prefer=<filesystem>] [--once]
                       [--allow-unknown-directory] [--allow-different-app]

EXAMPLES

  $ ggt sync
  $ ggt sync ~/gadget/example
  $ ggt sync ~/gadget/example --app=example
  $ ggt sync ~/gadget/example --app=example --env=development
  $ ggt sync ~/gadget/example --app=example --env=development --prefer=local --once
  $ ggt sync ~/gadget/example --app=example --env=development --prefer=local --once --allow-unknown-directory
  $ ggt sync ~/gadget/example --app=example --env=development --prefer=local --once --allow-unknown-directory --allow-different-app

ARGUMENTS

  DIRECTORY
    The path to the directory to sync files to. The directory will
    be created if it does not exist.

    Defaults to the current working directory. (default: \\".\\")

FLAGS

  -a, --app, --application=<name>
    The Gadget application to sync files to.

    If not provided, the application will be inferred from the
    \\".gadget/sync.json\\" file in the chosen directory or any of its
    parent directories.

    If a \\".gadget/sync.json\\" file is not found, you will be
    prompted to choose an application from your list of apps.

  -e, --env, --environment=<name>
    The Gadget development environment to sync files to.

    If not provided, the environment will be inferred from the
    \\".gadget/sync.json\\" file in the chosen directory or any of its
    parent directories.

    If a \\".gadget/sync.json\\" file is not found or invalid, you will
    be prompted to choose a development environment from your list
    of environments.

  --prefer=<filesystem>
    Which filesystem's changes to automatically keep when
    conflicting changes are detected.

    If not provided, sync will pause when conflicting changes are
    detected and you will be prompted to choose which changes to
    keep before sync resumes.

    Must be one of \\"local\\" or \\"gadget\\".

  --once
    When provided, sync will merge the changes from Gadget with
    the changes from your local filesystem like it does when
    started normally, but will then exit instead of continuing to
    watch for changes.

    Defaults to false.

  --allow-unknown-directory
    Allows sync to continue when the chosen directory already
    contains files and does not contain a valid \\".gadget/sync.json\\"
    file within it, or any of its parent directories.

    Defaults to false.

  --allow-different-app
    Allows sync to continue when the chosen directory contains a
    valid \\".gadget/sync.json\\" file, but the application within
    it does not match the application provided by the --app flag.

    Defaults to false.

Run \\"ggt sync -h\\" for less information.
"
`;

exports[`root > when sync is given > prints the usage when -h is passed 1`] = `
"Sync your local filesystem with your Gadget environment's
filesystem in real-time.

https://docs.gadget.dev/guides/development-tools/cli#filesync

USAGE
  ggt sync [DIRECTORY]

EXAMPLES
  $ ggt sync
  $ ggt sync ~/gadget/example
  $ ggt sync ~/gadget/example --app=example
  $ ggt sync ~/gadget/example --app=example --env=development --prefer=local

ARGUMENTS
  DIRECTORY    The directory to sync files to (default: \\".\\")

FLAGS
  -a, --app=<name>           The Gadget application to sync files to
  -e, --env=<name>           The environment to sync files to
      --prefer=<filesystem>  Prefer \\"local\\" or \\"gadget\\" conflicting changes
      --once                 Sync once and exit

  Run \\"ggt sync --help\\" for more information.
"
`;

exports[`root > when version is given > prints the usage when --help is passed 1`] = `
"Print the current version of ggt.

USAGE
  ggt version

EXAMPLES
  $ ggt version
"
`;

exports[`root > when version is given > prints the usage when -h is passed 1`] = `
"Print the current version of ggt.

USAGE
  ggt version

EXAMPLES
  $ ggt version
"
`;

exports[`root > when whoami is given > prints the usage when --help is passed 1`] = `
"Show the name and email address of the currently logged in user.

USAGE
  ggt whoami

EXAMPLES
  $ ggt whoami
"
`;

exports[`root > when whoami is given > prints the usage when -h is passed 1`] = `
"Show the name and email address of the currently logged in user.

USAGE
  ggt whoami

EXAMPLES
  $ ggt whoami
"
`;
